tests/fixtures/svs-v3/invalid/unknown-core-tlv.hex
244d064b071108036e646e0807737065633131343601031400150dc90bfdf00007756e6b6e6f776e16031b01001720649551113db30c9fa2be9daf32fad188e6f0f7001dd77f0abd0497d8ab99f838
